introduce explicit `classpath:` and `file:` schemes for fallback resource loading, and reject config with both text and file set